// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Instagram grid Each image should render, check snapshot 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <RNGestureHandlerButton
    collapsable={false}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
  >
    <View
      accessibilityRole="imagebutton"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 375,
          "justifyContent": "center",
          "width": 375,
        }
      }
    >
      <Image
        accessibilityLabel="mock label 1"
        onError={[Function]}
        source={
          Object {
            "uri": "https://scontent-iad3-1.cdninstagram.com/v/t51.2885-15/145372863_1697413997105257_7107894512468132698_n.jpg?_nc_cat=105&ccb=2&_nc_sid=8ae9d6&_nc_ohc=I59fzAWdaMoAX_oKKjv&_nc_ht=scontent-iad3-1.cdninstagram.com&oh=f54ed73bbb9882439940fb962375e77c&oe=604233A3",
          }
        }
        style={
          Object {
            "height": 330,
            "width": 330,
          }
        }
      />
    </View>
  </RNGestureHandlerButton>
  <RNGestureHandlerButton
    collapsable={false}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
  >
    <View
      accessibilityRole="imagebutton"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 375,
          "justifyContent": "center",
          "width": 375,
        }
      }
    >
      <Image
        accessibilityLabel="mock label 2"
        onError={[Function]}
        source={
          Object {
            "uri": "https://scontent-iad3-1.cdninstagram.com/v/t51.2885-15/144236968_2874527672759360_3132331619304084158_n.jpg?_nc_cat=109&ccb=2&_nc_sid=8ae9d6&_nc_ohc=P0k3mXw6kUcAX9OnMem&_nc_ht=scontent-iad3-1.cdninstagram.com&oh=7e1a2f4437fbe5e8a70f02b6c6472945&oe=6042E3C6",
          }
        }
        style={
          Object {
            "height": 330,
            "width": 330,
          }
        }
      />
    </View>
  </RNGestureHandlerButton>
  <RNGestureHandlerButton
    collapsable={false}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
  >
    <View
      accessibilityRole="imagebutton"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 375,
          "justifyContent": "center",
          "width": 375,
        }
      }
    >
      <Image
        accessibilityLabel="mock label 3"
        onError={[Function]}
        source={
          Object {
            "uri": "https://scontent-iad3-1.cdninstagram.com/v/t51.2885-15/143304653_858167404726503_5048110511012021886_n.jpg?_nc_cat=101&ccb=2&_nc_sid=8ae9d6&_nc_ohc=zBf73vuegDUAX_0vx19&_nc_ht=scontent-iad3-1.cdninstagram.com&oh=ff5d9fceadd235211ddb3540cdc94434&oe=60432679",
          }
        }
        style={
          Object {
            "height": 330,
            "width": 330,
          }
        }
      />
    </View>
  </RNGestureHandlerButton>
  <RNGestureHandlerButton
    collapsable={false}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
  >
    <View
      accessibilityRole="imagebutton"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 375,
          "justifyContent": "center",
          "width": 375,
        }
      }
    >
      <Image
        accessibilityLabel="mock label 4"
        onError={[Function]}
        source={
          Object {
            "uri": "https://scontent-iad3-1.cdninstagram.com/v/t51.2885-15/142998934_2485890091715689_3713114072043320863_n.jpg?_nc_cat=111&ccb=2&_nc_sid=8ae9d6&_nc_ohc=1sINqAqXYhgAX8emcx_&_nc_ht=scontent-iad3-1.cdninstagram.com&oh=b980760914082c01632a62f9da5941e2&oe=6042CFA9",
          }
        }
        style={
          Object {
            "height": 330,
            "width": 330,
          }
        }
      />
    </View>
  </RNGestureHandlerButton>
  <RNGestureHandlerButton
    collapsable={false}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
  >
    <View
      accessibilityRole="imagebutton"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 375,
          "justifyContent": "center",
          "width": 375,
        }
      }
    >
      <Image
        accessibilityLabel="mock label 5"
        onError={[Function]}
        source={
          Object {
            "uri": "https://scontent-iad3-1.cdninstagram.com/v/t51.29350-15/143246870_459802675151826_8328121703670862151_n.jpg?_nc_cat=106&ccb=2&_nc_sid=8ae9d6&_nc_ohc=axLWEYX5A0IAX9g2Ql4&_nc_ht=scontent-iad3-1.cdninstagram.com&oh=bc44bcc162c18aea0fb6b3f73899742e&oe=6042C6ED",
          }
        }
        style={
          Object {
            "height": 330,
            "width": 330,
          }
        }
      />
    </View>
  </RNGestureHandlerButton>
  <RNGestureHandlerButton
    collapsable={false}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
  >
    <View
      accessibilityRole="imagebutton"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 375,
          "justifyContent": "center",
          "width": 375,
        }
      }
    >
      <Image
        accessibilityLabel="mock label 6"
        onError={[Function]}
        source={
          Object {
            "uri": "https://scontent-iad3-1.cdninstagram.com/v/t51.2885-15/141311072_2825909344314669_7111085370817907148_n.jpg?_nc_cat=107&ccb=2&_nc_sid=8ae9d6&_nc_ohc=SHjvcFJx7qIAX91xx3X&_nc_ht=scontent-iad3-1.cdninstagram.com&oh=78d810e21a562420ce0bb2fb0aad5c26&oe=60412C06",
          }
        }
        style={
          Object {
            "height": 330,
            "width": 330,
          }
        }
      />
    </View>
  </RNGestureHandlerButton>
  <RNGestureHandlerButton
    collapsable={false}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
  >
    <View
      accessibilityRole="imagebutton"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 375,
          "justifyContent": "center",
          "width": 375,
        }
      }
    >
      <Image
        accessibilityLabel="mock label 7"
        onError={[Function]}
        source={
          Object {
            "uri": "https://scontent-iad3-1.cdninstagram.com/v/t51.2885-15/141106719_918973682172491_5692715271187105972_n.jpg?_nc_cat=106&ccb=2&_nc_sid=8ae9d6&_nc_ohc=p7nbsmbZnSsAX-2y7ry&_nc_ht=scontent-iad3-1.cdninstagram.com&oh=d36848b891db29b3eed5a711b4837385&oe=6042C2AA",
          }
        }
        style={
          Object {
            "height": 330,
            "width": 330,
          }
        }
      />
    </View>
  </RNGestureHandlerButton>
  <RNGestureHandlerButton
    collapsable={false}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
  >
    <View
      accessibilityRole="imagebutton"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 375,
          "justifyContent": "center",
          "width": 375,
        }
      }
    >
      <Image
        accessibilityLabel="mock label 8"
        onError={[Function]}
        source={
          Object {
            "uri": "https://scontent-iad3-1.cdninstagram.com/v/t51.2885-15/141092966_501537257502007_7800873007797386215_n.jpg?_nc_cat=105&ccb=2&_nc_sid=8ae9d6&_nc_ohc=VYowmoI7W2UAX8sTgsZ&_nc_ht=scontent-iad3-1.cdninstagram.com&oh=30b8f06c2e06dc38c5b3dbfe80e1dac6&oe=604207C6",
          }
        }
        style={
          Object {
            "height": 330,
            "width": 330,
          }
        }
      />
    </View>
  </RNGestureHandlerButton>
</View>
`;

exports[`Instagram grid Missing fields in data 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <RNGestureHandlerButton
    collapsable={false}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
  >
    <View
      accessibilityRole="imagebutton"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 375,
          "justifyContent": "center",
          "width": 375,
        }
      }
    >
      <Image
        accessibilityLabel="tap to view on Instagram"
        onError={[Function]}
        source={
          Object {
            "uri": "",
          }
        }
        style={
          Object {
            "height": 330,
            "width": 330,
          }
        }
      />
    </View>
  </RNGestureHandlerButton>
  <RNGestureHandlerButton
    collapsable={false}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
  >
    <View
      accessibilityRole="imagebutton"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 375,
          "justifyContent": "center",
          "width": 375,
        }
      }
    >
      <Image
        accessibilityLabel="tap to view on Instagram"
        onError={[Function]}
        source={
          Object {
            "uri": "https://scontent-iad3-1.cdninstagram.com/v/t51.2885-15/144236968_2874527672759360_3132331619304084158_n.jpg?_nc_cat=109&ccb=2&_nc_sid=8ae9d6&_nc_ohc=P0k3mXw6kUcAX9OnMem&_nc_ht=scontent-iad3-1.cdninstagram.com&oh=7e1a2f4437fbe5e8a70f02b6c6472945&oe=6042E3C6",
          }
        }
        style={
          Object {
            "height": 330,
            "width": 330,
          }
        }
      />
    </View>
  </RNGestureHandlerButton>
</View>
`;
